# RAUKF

./: .gitignore  CMakeLists.txt  README.md  clean.bat  clean.sh  cmd.sh  main.cpp  main_test.cpp  memcheck.txt
measurements/case2/: Rec-0002_1999.csv  Rec-0002_2000.csv  Rec-0002_2001.csv  Rec-0002_2002.csv  Rec-0002_2003.csv  Rec-0002_2004.csv  Rec-0002_2005.csv  Rec-0002_2006.csv  Rec-0002_2007.csv  Rec-0002_2008.csv  Rec-0002_2009.csv  Rec-0002_2010.csv  Rec-0002_2011.csv  Rec-0002_2012.csv  Rec-0002_2013.csv  Rec-0002_2014.csv  Rec-0002_2015.csv  Rec-0002_2016.csv  Rec-0002_2017.csv  Rec-0002_2018.csv  Rec-0002_2019.csv  Rec-0002_2020.csv  Rec-0002_2021.csv  Rec-0002_2022.csv  Rec-0002_2023.csv  Rec-0002_2024.csv  Rec-0002_2025.csv  Rec-0002_2026.csv  Rec-0002_2027.csv  Rec-0002_2028.csv  Rec-0002_2029.csv  Rec-0002_2030.csv  Rec-0002_2031.csv  Rec-0002_2032.csv  Rec-0002_2033.csv  Rec-0002_2034.csv  Rec-0002_2035.csv  Rec-0002_2036.csv  Rec-0002_2037.csv  Rec-0002_2038.csv  (+2427 more)
parser/: Manifest.toml  Project.toml  parser.jl
src/filter/: CMakeLists.txt
src/filter/include/: kf.hpp  raukf.hpp
src/filter/src/: kf.cpp  raukf.cpp
src/hfe/: CMakeLists.txt
src/hfe/include/: hc.hpp  hcr.hpp  hfe.hpp
src/hfe/src/: hc.cu  hcr.cu  hfe.cpp
src/hfe2D/: CMakeLists.txt
src/hfe2D/include/: hc2D.hpp  hfe2D.hpp
src/hfe2D/src/: hc2D.cu  hfe2D.cpp
src/math/: CMakeLists.txt
src/math/include/: interpolation.hpp  interpolationCPU.hpp  interpolationGPU.hpp  math.hpp  mathCPU.hpp  mathGPU.hpp  random.hpp  randomCPU.hpp  randomGPU.hpp
src/math/src/: interpolation.cpp  interpolationCPU.cpp  interpolationGPU.cu  math.cpp  mathCPU.cpp  mathGPU.cu  random.cpp  randomCPU.cpp  randomGPU.cu
src/model/: CMakeLists.txt
src/model/include/: aem.hpp  lmodel.hpp  model.hpp  nlmodel.hpp
src/model/src/: aem.cpp  lmodel.cpp  model.cpp  nlmodel.cpp
src/raukf/: CMakeLists.txt
src/raukf/include/: raukf.hpp
src/raukf/src/: raukf.cpp
src/statistics/: CMakeLists.txt
src/statistics/include/: statistics.hpp
src/statistics/src/: statistics.cpp
src/structure/: CMakeLists.txt
src/structure/include/: control.hpp  data.hpp  measure.hpp  pointer.hpp
src/structure/src/: control.cpp  data.cpp  measure.cpp  pointer.cpp
src/timer/: CMakeLists.txt
src/timer/include/: timer.hpp
src/timer/src/: timer.cpp
visualization/: Manifest.toml  Project.toml  main.jl
visualization/plot/: Manifest.toml  Project.toml  geometry.jl  plot.jl
visualization/plot2D/: Manifest.toml  Project.toml  plot2D.jl
visualization/tracker/: Manifest.toml  Project.toml  tracker.jl
